--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,11 @@
-On: grammarly
-runs-on:
-Jobs: 
+name: Chrome
+on: push
+jobs:
+  chrome:
+    runs-on: ubuntu-22.04
+    name: E2E on Chrome
+    steps:
+      - uses: actions/checkout@v3
+      - uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
