--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,13 @@ jobs:
           browser: chrome
       - uses: actions/upload-artifact@v3
         # add the line below to store screenshots only on failures
-        # if: failure()
+        if: always()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           #if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: cypress-videos
           path: cypress/videos
